--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body> 
-    <h1> Hola pipipi </h1>
+    <h1> Hola </h1>
+    <p>Mi nonmbre es Carlos tengo 21 y tengo hambre</p>
+
+    
 </body>
 </html>
