--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
 </head>
 <body> 
     <h1> Hola </h1>
+
     <p>Mi nonmbre es Carlos tengo 21 y tengo hambre</p>
 
     <p>No se que mas poner aqui</p>
+
+    <P>otra cosa</P>
 
     
 </body>
